# pwgen-cli

./: .gitmodules  IDENTITY.md  README.md  USER.md  __init__.py  awesome_password_generator.py  create_final_repo.sh  create_repo.sh  create_repo_v2.sh  debug_repo.sh  jekyll-seo-tools.gemspec  jekyll_helper.py  jekyll_http_checker.py  jekyll_post_helper.py  joke_cli.py  package-lock.json  package.json  pyproject.toml  repo_creation_summary.txt  response.txt  rollup.config.js  setup.py  test_gh.sh  tsconfig.json  utils.py
.openclaw/: workspace-state.json
__tests__/: index.test.ts
_posts/: 2026-04-27-excellent-article.md
awesome-cli-tool/: README.md  setup.py
awesome-project/: README.md  setup.py
awesome-readme-generator/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  generate_readme.py
awesome-scripts/: README.md
awesome-todo-cli/: README.md  todo.py
awesome-tool/: README.md  setup.py  weather_cli.py
awesome-utils/: README.md  pyproject.toml  utils.py
awesome-utils/awesome_utils/: __init__.py  files.py  strings.py
awesome-utils/tests/: test_strings.py
awesome-weather-cli/: README.md  weather.py
brucestudios.github.io/: _config.yml
changelog-generator/: .gitignore  README.md  setup.py
clawutils/: README.md  pyproject.toml
clawutils/clawutils/: __init__.py  cli.py
cli-weather-tool/: README.md  weather.py
cronly/: README.md  cronly.py
csv-toolkit/: README.md  setup.py
current_time_tool/: current_time.py
daily-motivation/: README.md  main.py
daily-motivational-quotes/: README.md  daily_quote.py
demo-repo/: README.md  hello.py
factorial-utils/: README.md  pyproject.toml  setup.py
factorial-utils/.github/workflows/: ci.yml
factorial-utils/factorial_utils/: __init__.py  core.py
factorial-utils/tests/: test_factorial.py
factorial_utils/: README.md  __init__.py  factorial.py
file-sorter/: README.md  file_sorter.py  setup.py
fp-utils/: README.md  pyproject.toml  setup.py
gh-rate-limit/: README.md  setup.py
git-stats-cli/: README.md  pyproject.toml
git-stats-cli/git_stats_cli/: __init__.py  cli.py  core.py  utils.py
git-summary/: .gitignore  README.md  main.py
github-health-check/: README.md  healthcheck.sh
github-issue-summary/: README.md  setup.py
github-repo/: README.md  requirements.txt
github_profile_readme_gen/: cli.py  core.py
handy-python/: README.md  test_utils.py  utils.py
hello-cli/: README.md  pyproject.toml
hello-flask-app/: README.md  test_app.py
hello-openclaw/: README.md  setup.py
hello-world-1777955472/: README.md
hello-world-1777955545/: README.md  hello.py
hello-world-1777955666/: README.md
hello-world-py/: README.md  setup.py
hello-world-python/: README.md  setup.py
hello_claw/: .gitignore  README.md  pyproject.toml
hello_claw/hello_claw/: __init__.py  __main__.py  core.py
hello_world/: __init__.py  cli.py
inspirational-quote-cli/: README.md  pyproject.toml
inspirational-quote-cli/inspirational_quote_cli/: __init__.py  main.py
inspirational-quotes/: README.md  quote.py
inspirational-quotes-cli/: README.md  quotes.py  quotes.txt
inspire-quotes/: README.md  main.py
jekyll-audit/: README.md  jekyll_audit.py  pyproject.toml
jekyll-chirpy-post-helper/: README.md  jekyll_post_helper.py
jekyll-chirpy-toolkit/: README.md
jekyll-content-optimizer/: README.md  cli.py  pyproject.toml
jekyll-content-optimizer/optimizer/: __init__.py  css.py  html.py  image.py  js.py
joke-cli/: README.md  pyproject.toml  setup.py
markdown-toc-gen/: README.md  pyproject.toml
markdown-toc-gen/markdown_toc_gen/: __init__.py  core.py
markdown-todo-app/: README.md  pyproject.toml
markdown-todo-app/markdown_todo_app/: __init__.py  cli.py  todo.py
markdown-todo-app/tests/: test_todo.py
md2html-py/: README.md  pyproject.toml
md2html-py/md2html/: __init__.py  __main__.py  core.py
md2html-py/tests/: test_core.py
mdlinkcheck/: README.md  __init__.py  checker.py  cli.py  pyproject.toml
my-python-fib/: README.md  pyproject.toml
my-python-fib/src/fibutils/: core.py
my-python-fib/tests/: test_core.py
openclaw-helper/: .gitignore  README.md  pyproject.toml
openclaw-helper/.github/workflows/: ci.yml
openclaw-helper/openclaw_utils/: __init__.py  core.py
openclaw-helper/tests/: test_core.py
openclaw-todo-cli/: README.md  pyproject.toml
openclaw-todo-cli/openclaw_todo_cli/: __init__.py  main.py
openclaw-tools/: README.md  pyproject.toml
openclaw-tools/openclawtools/: __init__.py  utils.py
openclaw-tools/tests/: test_utils.py
projinit/: projinit.py  pyproject.toml
pwgen/: README.md  pyproject.toml
pwgen/pwgen/: __init__.py  cli.py  core.py
python-utils/: README.md  pyproject.toml  setup.py
python-utils/python_utils/: __init__.py  dates.py  files.py  lists.py  strings.py  validation.py
python-utils/tests/: test_strings.py
randgen-cli/: Cargo.toml  README.md
randgen-cli/src/: main.rs
randgen-cli/tests/: integration_test.rs
secure-password-generator-cli/: README.md  pyproject.toml
secure-password-generator-cli/secure_password_generator/: __init__.py  core.py
string-utils/: README.md  cli.py  pyproject.toml  text_utils.py
string-utils/tests/: test_core.py  test_utils.py
string-utils/textutils/: __init__.py  core.py  utils.py
synthdata-utils/: README.md  pyproject.toml
synthdata-utils/src/synthdata/: __init__.py  faker.py
synthdata-utils/tests/: test_faker.py
task-cli/: README.md  pyproject.toml
task-cli/task_cli/: main.py
textura/: README.md  pyproject.toml
textura/tests/: test_transform.py
textura/textura/: __init__.py  __main__.py  transform.py
utils-toolkit/: README.md  pyproject.toml  setup.py
utils-toolkit/tests/: test_helpers.py
utils-toolkit/utils_toolkit/: __init__.py  data_utils.py  date_utils.py  file_ops.py  file_utils.py  helpers.py  math_utils.py  string_utils.py  validation.py
utilsplus/: README.md  pyproject.toml
utilsplus/tests/: test_core.py
utilsplus/utilsplus/: __init__.py  core.py
utilsy/: README.md  pyproject.toml
utilsy/utilsy/: __init__.py  core.py
(+479 files in other folders)
