[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawutils"
version = "0.1.0"
description = "A collection of useful CLI utilities for OpenClaw workflow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Assistant", email = "assistant@openclaw.local"}
]
keywords = ["cli", "utility", "openclaw"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brucestudios/clawutils"

[project.scripts]
clawutils = "clawutils.cli:main"

[tool.setuptools.packages.find]
where = ["."]