[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-stats-cli"
version = "1.0.0"
description = "A powerful command-line tool for analyzing Git repository statistics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "brucestudios", email = "henshao.fang@outlook.com"}
]
keywords = ["git", "statistics", "cli", "repository", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/brucestudios/git-stats-cli"
Documentation = "https://github.com/brucestudios/git-stats-cli#readme"
Repository = "https://github.com/brucestudios/git-stats-cli.git"
Issues = "https://github.com/brucestudios/git-stats-cli/issues"

[project.scripts]
git-stats-cli = "git_stats_cli.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.9",
]

[project.dependencies]
GitPython>=3.1.0
click>=8.0