[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jekyll-content-optimizer"
version = "0.1.0"
description = "A CLI tool to optimize Jekyll site content (images, HTML, CSS, JS)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bruce Fang", email = "henshao.fang@outlook.com"}
]
keywords = ["jekyll", "optimizer", "cli", "static-site", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=9.0.0",
    "csscompressor>=0.9.5",
    "htmlmin>=0.1.12",
    "jsmin>=2.2.2",
    "click>=8.0.0",
]
[project.urls]
Homepage = "https://github.com/brucestudios/jekyll-content-optimizer"
Documentation = "https://github.com/brucestudios/jekyll-content-optimizer#readme"
Repository = "https://github.com/brucestudios/jekyll-content-optimizer"
Issues = "https://github.com/brucestudios/jekyll-content-optimizer/issues"

[project.scripts]
jekyll-content-optimizer = "jekyll_content_optimizer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"