[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joke-cli"
version = "0.1.0"
description = "A command-line tool to fetch and display random jokes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = ["joke", "cli", "humor"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/joke-cli"

[project.scripts]
joke = "joke_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]