[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-toc-gen"
version = "0.1.0"
description = "A simple Python tool to generate a table of contents for Markdown files."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Bruce Fang", email = "henshao.fang@outlook.com"}
]
keywords = ["markdown", "toc", "table of contents", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/brucestudios/markdown-toc-gen"
Bug Tracker = "https://github.com/brucestudios/markdown-toc-gen/issues"

[project.scripts]
markdown-toc-gen = "markdown_toc_gen.core:main"