[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlinkcheck"
version = "0.1.0"
description = "A simple command-line tool to check for broken links in Markdown files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bruce Fang", email = "henshao.fang@outlook.com"}
]
keywords = ["markdown", "link", "checker", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/brucestudios/mdlinkcheck"
Repository = "https://github.com/brucestudios/mdlinkcheck.git"
Issues = "https://github.com/brucestudios/mdlinkcheck/issues"

[project.scripts]
mdlinkcheck = "mdlinkcheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "C90"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]