[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibutils"
version = "0.1.0"
description = "Fibonacci number utility"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Agent", email = "agent@example.com"}
]
keywords = ["fibonacci", "math", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brucestudios/fibutils"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = ["tests"]