[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-tools"
version = "0.1.0"
description = "Utility functions for OpenClaw"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Bruce Studios", email = "bruce@example.com"}
]
keywords = ["openclaw", "utilities", "helpers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/brucestudios/openclaw-tools"