[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-password-generator-cli"
version = "0.1.0"
description = "A secure password generator CLI and library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bruce Studios", email = "bruce@example.com"}
]
keywords = ["password", "generator", "security", "cli", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/brucestudios/secure-password-generator-cli"
Documentation = "https://github.com/brucestudios/secure-password-generator-cli#readme"
Repository = "https://github.com/brucestudios/secure-password-generator-cli"
Issues = "https://github.com/brucestudios/secure-password-generator-cli/issues"

[project.scripts]
spg = "secure_password_generator.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secure_password_generator*"]

[tool.setuptools.package-data]
secure_password_generator = ["py.typed"]