[project]
name = "task-cli"
version = "0.1.0"
description = "A simple command-line task manager"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["task", "todo", "cli", "command-line"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/task-cli"
Documentation = "https://github.com/yourusername/task-cli#readme"

[project.scripts]
task-cli = "task_cli.main:main"