[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textura"
version = "0.1.0"
description = "A versatile command-line tool for text transformation and manipulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bruce Fang", email = "henshao.fang@outlook.com"}
]
keywords = ["cli", "text", "processing", "transformation", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/brucestudios/textura"
Documentation = "https://github.com/brucestudios/textura#readme"
Repository = "https://github.com/brucestudios/textura"
Issues = "https://github.com/brucestudios/textura/issues"

[project.scripts]
textura = "textura.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["textura*"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "C90"]
ignore = []