[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilsy"
version = "0.1.0"
description = "A collection of useful utility functions for Python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["utility", "helper", "factorial", "prime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brucestudios/utilsy"

[tool.setuptools.packages.find]
where = ["."]
include = ["utilsy*"]